--- a/precision.css
+++ b/precision.css
@@ -23,6 +23,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
+  position: relative;
 }
 
 #game {
@@ -42,6 +43,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.visor{
+  width: 30vw;
+  height: auto;
+  background-color: #2c2c2c;
+  color: #ffffff;
+  border-radius: 10px;
+  position: absolute;
+  left: 35vw;
+  top: 20px;
 }
 
 #end {
@@ -174,7 +186,7 @@ a:visited {
   width: 10px;
   height: 10px;
   background-color: inherit;
-  border-radius: 50%;
+  border-radius: 0%;
   position: absolute;
 }
 
